@@ -90,3 +90,5 @@ Changes in version 1.9.x
 + *RDA & *CCA: scores parameter for specifying output
 + Improve mergeSEs and loadFromBiom
 + Faith index: bugfix
++ runRDA bugfix: vegan::dbrda and vegan::vegdist have different parameter for dissimilarity --> taken into account
+
